--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --hmr -o",
     "build": "ng build",
-    "deploy": "git checkout gh-pages && ng build --prod --output-path docs --base-href /gocode-shop/ && git add . && git commit -m \"update docs\" && git push -u origin gh-pages && git checkout master",
+    "deploy": "git checkout -B gh-pages && ng build --prod --output-path docs --base-href /gocode-shop/ && git add . && git commit -m \"update docs\" && git push -u origin gh-pages && git checkout master",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
